# audio-player

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/audio_player/: audio_player.hpp
src/pulse_client/: exceptions.h  pulse_audio.cpp  pulse_client.hpp
